# ad-ess

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix
.github/workflows/: python-build.yml  python-doc.yml  release-pypi.yml
python/: Cargo.toml  README.md  example.py  mk_doc.sh  pyadess.pyi  pyproject.toml
python/src/: lib.rs
rust/: Cargo.toml  README.md
rust/src/: ad_ess.rs  lib.rs  main.rs  rts.rs  tests.rs  trellis.rs  trellis_utils.rs  utils.rs
