[build-system]
requires = ["maturin>=1.3.0"]
build-backend = "maturin"

[project]
name = "pyadess"
version = "0.1.0"
requires-python = ">=3.7"
requires = [
    "numpy"
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"
