[build-system]
requires = ["maturin>=1.3.0"]
build-backend = "maturin"

[project]
name = "pyadess"
description = "Implementation of Generalized Enumerative Sphere Shaping in Rust called Arbitrary Distribution Enumerative Sphere Shaping (AD-ESS)"
license = "GPL-3.0-or-later"
version = "0.1.1.post1"
requires-python = ">=3.7"
requires = [
    "numpy"
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"

[project.urls]
Github = "https://github.com/kit-cel/ad-ess"
Documentation = "https://kit-cel.github.io/ad-ess/pyadess.html"
